@@ -8,6 +8,7 @@
 - HTTPS support in SMSEagle driver
 - New network map element - text box
 - Improved audit logging on object creation
+- NXSL function "GeoLocation" replaced with "GeoLocation" class constructor
 - Fixed issues: 
 	NX-662 (New network map element - text box)
 	NX-703 (Export/Import actions)
